examples/type_system/failing/178_import_except_missing_open_bracket.flx
import Foo.Bar except x, y ]
let after = 1
